# music_classifier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  shell.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: train_simple_cnn.py  train_simple_cnn.sh
src/: __init__.py  app.py  audio_processing.py  data_loader.py  generate_embeddings.py  models.py  preprocess.py  run_training.py  train.py
